# redis

./: .cproject  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .project  .travis.yml  00-RELEASENOTES  Add stable  BETATESTING.txt  BUGS  CLUSTER  CLUSTER.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONDUCT  CONTRIBUTING  CONTRIBUTING.md  COPYING  COPYING.md  Changelog  GPATH  GRTAGS  GSYMS  GTAGS  INSTALL  INSTALL.md  LICENSE  LICENSE.txt  MANIFESTO  Makefile  RDMA.md  README  README.Garantia  README.cw.md  README.md  REDISCONTRIBUTIONS.txt  Redis on Windows Release Notes.md  Redis on Windows.md  (+99 more)
.circleci/: config.yml
.codespell/: .codespellrc  requirements.txt  wordlist.txt
.github/: .codespellrc  dependabot.yml  pull.yml  wordlist.txt
.github/ISSUE_TEMPLATE/: STATEMENT  bug_report.md  crash_report.md  feature_request.md  other_stuff.md  question.md
.github/workflows/: amusing.yml  benchmarks-oss-redis-standalone-small.yml  benchmarks-trigger.yml  ci.yml  codecov.yml  codeql-analysis.yml  coverity.yml  daily.yml  external.yml  modules-api-ref-docs-sync.yaml  redis_docs_sync.yaml  reply-schemas-linter.yml  spell-check.yml  test.yml  tmp.yml
Win32_Redis/: Win32_Redis.vcxproj
adapters/: glib.h  libevent.h  macosx.h
binaries/: redis-benchmark  redis-check-aof  redis-check-dump  redis-cli  redis-server
client-libraries/: README  update-clojure-client.sh  update-cpp-client.sh  update-erlang-client.sh  update-lua-client.sh  update-perl-client.sh  update-python-client.sh  update-ruby-client.sh  update-scala-client.sh
client-libraries/clojure/: .gitignore  LICENSE  README.markdown  build.xml
client-libraries/cpp/: Makefile  README.rst  TODO  anet.c  fmacros.h  redisclient.cpp  redisclient.h  test_client.cpp
client-libraries/erlang/: .hg_archival.txt  .hgignore  LICENSE  Makefile
client-libraries/lua/: .LICENSE.swp  LICENSE  README  redis.lua
client-libraries/perl/: Changes  MANIFEST  Makefile.PL  README
client-libraries/php/: redis.php  tests.php
client-libraries/python/: redis.py
client-libraries/ruby/: .gitignore  LICENSE  README.markdown  README.rdoc  Rakefile  bench.rb  fill.rb  profile.rb  redis-rb.gemspec  speed.rb
client-libraries/ruby_2/: rubyredis.rb
client-libraries/scala/: .gitignore  README.md
client-libraries/tcl/: redis.tcl
debian/: changelog  control  copyright  redis-benchmark.1  redis-cli.1  redis-doc.doc-base  redis-doc.docs  redis-server.1  redis-server.dirs  redis-server.init  redis-server.install  redis-server.logrotate  redis-server.manpages  redis-server.postinst  redis-server.postrm  redis-server.preinst  redis.conf  redis_conf.diff  rules  watch
design-documents/: REDIS-CLUSTER  REDIS-CLUSTER-2  REDIS-CLUSTER-2.md  REDIS-CLUSTER.md  VIRTUAL-MEMORY
doc/: AppendCommand.html  AppendOnlyFileHowto.html  AuthCommand.html  Benchmarks.html  BgrewriteaofCommand.html  BgsaveCommand.html  BlpopCommand.html  BrpoplpushCommand.html  CommandReference.html  Comparisons.html  ConfigCommand.html  Configuration.html  ConnectionHandlingSidebar.html  ControlCommandsSidebar.html  Credits.html  DbsizeCommand.html  DelCommand.html  DesignPatterns.html  EventLibray.html  ExistsCommand.html  ExpireCommand.html  FAQ.html  Features.html  FlushallCommand.html  FlushdbCommand.html  FromSqlToDataStructures.html  GenericCommandsSidebar.html  GetCommand.html  GetbitCommand.html  GetsetCommand.html  HackingStrings.html  HashCommandsSidebar.html  Hashes.html  HdelCommand.html  HexistsCommand.html  HgetCommand.html  HgetallCommand.html  HincrbyCommand.html  HlenCommand.html  HmgetCommand.html  (+111 more)
examples/: CMakeLists.txt  example-ivykis.c  example-libhv.c  example-poll.c
images/: Flotilla - Failover.drawio  Flotilla - Join Node.drawio  Flotilla - Move shards.drawio  Flotilla - Resharding.drawio  Flotilla - high level overview.drawio
lib/: redis.rb
modules/: .gitignore  Makefile  common.mk  module_system.c
msvs/: RedisLog.h  RedisServer.sln  RedisServer.vcxproj  compressOutputToReleaseFolder.ps1
plugins/: Makefile  plugin-get.c  plugin-hello.c
src/: .gitignore  .t_zset.c.un~  CMakeLists.txt  Makefile  Makefile.dep  RedisLog.c  SCRIPTING.txt  Win32_FDAPI.cpp  Win32_FDAPI.h  Win32_QFork.cpp  Win32_QFork.h  Win32_QFork_impl.c  Win32_QFork_impl.h  Win32_SmartHandle.h  Win32_dlmalloc.c  Win32_dlmalloc.h  _keystats_pull_request.md  acl.c  acls.c  acls.h  adlist.c  adlist.h  ae.c  ae.h  ae_epoll.c  ae_epoll.h  ae_evport.c  ae_evport.h  ae_iouring.c  ae_kqueue.c  ae_kqueue.h  ae_pollset.c  ae_rpoll.c  ae_select.c  ae_select.h  ae_wsiocp.c  alloc.h  anet.c  anet.h  aof.c  (+351 more)
src/modules/: .gitignore  API.md  BLOCK.md  CMakeLists.txt  INTRO.md  Makefile  TYPES.md  gendoc.rb  helloacl.c  helloblock.c  hellocluster.c  hellodict.c  hellofilter.c  hellohook.c  hellonet.c  hellonotify.c  hellotimer.c  hellotype.c  helloworld.c  hooks.c  module.mk  testmodule.c
src/modules/examples/: Makefile  helloacl.c  helloblock.c  hellocluster.c  hellodict.c  hellohook.c  hellotimer.c  hellotype.c  helloworld.c  testmodule.c
src/modules/tlsauth/: Makefile  README.md  tlsauth.c
test/: test_helper.tcl
tests/: README.md  SSL_TEST_INSTRUCTIONS  instances.tcl  sentinel.tcl  test.conf  test_bgsave.tcl  test_bgsaveperf.tcl  test_helper.tcl
tmp/: incrdecay.lua  incrdecay2.lua
utils/: aof_backup.sh  build-static-symbols.tcl  cluster.yaml  cluster_fail_time.tcl  corrupt_rdb.c  dumpsave_client.py  gen-test-certs.sh  generate-cli-commands.py  generate-command-code.py  generate-command-help.rb  generate-commands-json.py  generate-fmtargs.py  generate-module-api-doc.rb  generate-unit-test-header.py  generate_fmtargs.py  get_glibc_version.c  help.h  install_server.sh  lint.sh  mktarball.sh  processOutput.sh  redis-copy.rb  redis-sha1.rb  redis.conf.tpl  redisClient.conf  redisServer.conf  redis_init_script  redis_init_script.tpl  reply_schema_linter.js  req-res-log-valiadtor.py  req-res-log-validator.py  runRedisBench.sh  speed-regression.tcl  systemd-redis_multiple_servers@.service  systemd-redis_server.service  tag.sh  tracking_collisions.c  whatisdoing.sh
(+1417 files in other folders)
