cmake_minimum_required(VERSION 3.15)
project(redis)

set(CMAKE_CXX_STANDARD 14)

include_directories(deps/hiredis)
include_directories(deps/hiredis/adapters)
include_directories(deps/jemalloc/include)
include_directories(deps/jemalloc/include/jemalloc)
include_directories(deps/jemalloc/include/jemalloc/internal)
include_directories(deps/jemalloc/include/msvc_compat)
include_directories(deps/jemalloc/test/include)
include_directories(deps/jemalloc/test/include/test)
include_directories(deps/jemalloc/test/unit)
include_directories(deps/linenoise)
include_directories(deps/lua/etc)
include_directories(deps/lua/src)
include_directories(src)

add_executable(redis
        deps/hiredis/adapters/ae.h
        deps/hiredis/adapters/libev.h
        deps/hiredis/adapters/libevent.h
        deps/hiredis/adapters/libuv.h
        deps/hiredis/examples/example-ae.c
        deps/hiredis/examples/example-libev.c
        deps/hiredis/examples/example-libevent.c
        deps/hiredis/examples/example-libuv.c
        deps/hiredis/examples/example.c
        deps/hiredis/async.c
        deps/hiredis/async.h
        deps/hiredis/dict.c
        deps/hiredis/dict.h
        deps/hiredis/fmacros.h
        deps/hiredis/hiredis.c
        deps/hiredis/hiredis.h
        deps/hiredis/net.c
        deps/hiredis/net.h
        deps/hiredis/sds.c
        deps/hiredis/sds.h
        deps/hiredis/test.c
        deps/hiredis/zmalloc.h
        deps/jemalloc/include/jemalloc/internal/arena.h
        deps/jemalloc/include/jemalloc/internal/atomic.h
        deps/jemalloc/include/jemalloc/internal/base.h
        deps/jemalloc/include/jemalloc/internal/bitmap.h
        deps/jemalloc/include/jemalloc/internal/chunk.h
        deps/jemalloc/include/jemalloc/internal/chunk_dss.h
        deps/jemalloc/include/jemalloc/internal/chunk_mmap.h
        deps/jemalloc/include/jemalloc/internal/ckh.h
        deps/jemalloc/include/jemalloc/internal/ctl.h
        deps/jemalloc/include/jemalloc/internal/extent.h
        deps/jemalloc/include/jemalloc/internal/hash.h
        deps/jemalloc/include/jemalloc/internal/huge.h
        deps/jemalloc/include/jemalloc/internal/jemalloc_internal_macros.h
        deps/jemalloc/include/jemalloc/internal/mb.h
        deps/jemalloc/include/jemalloc/internal/mutex.h
        deps/jemalloc/include/jemalloc/internal/prng.h
        deps/jemalloc/include/jemalloc/internal/prof.h
        deps/jemalloc/include/jemalloc/internal/ql.h
        deps/jemalloc/include/jemalloc/internal/qr.h
        deps/jemalloc/include/jemalloc/internal/quarantine.h
        deps/jemalloc/include/jemalloc/internal/rb.h
        deps/jemalloc/include/jemalloc/internal/rtree.h
        deps/jemalloc/include/jemalloc/internal/stats.h
        deps/jemalloc/include/jemalloc/internal/tcache.h
        deps/jemalloc/include/jemalloc/internal/tsd.h
        deps/jemalloc/include/jemalloc/internal/util.h
        deps/jemalloc/include/msvc_compat/inttypes.h
        deps/jemalloc/include/msvc_compat/stdbool.h
        deps/jemalloc/include/msvc_compat/stdint.h
        deps/jemalloc/include/msvc_compat/strings.h
        deps/jemalloc/src/arena.c
        deps/jemalloc/src/atomic.c
        deps/jemalloc/src/base.c
        deps/jemalloc/src/bitmap.c
        deps/jemalloc/src/chunk.c
        deps/jemalloc/src/chunk_dss.c
        deps/jemalloc/src/chunk_mmap.c
        deps/jemalloc/src/ckh.c
        deps/jemalloc/src/ctl.c
        deps/jemalloc/src/extent.c
        deps/jemalloc/src/hash.c
        deps/jemalloc/src/huge.c
        deps/jemalloc/src/jemalloc.c
        deps/jemalloc/src/mb.c
        deps/jemalloc/src/mutex.c
        deps/jemalloc/src/prof.c
        deps/jemalloc/src/quarantine.c
        deps/jemalloc/src/rtree.c
        deps/jemalloc/src/stats.c
        deps/jemalloc/src/tcache.c
        deps/jemalloc/src/tsd.c
        deps/jemalloc/src/util.c
        deps/jemalloc/src/zone.c
        deps/jemalloc/test/include/test/math.h
        deps/jemalloc/test/include/test/mq.h
        deps/jemalloc/test/include/test/mtx.h
        deps/jemalloc/test/include/test/SFMT-alti.h
        deps/jemalloc/test/include/test/SFMT-params.h
        deps/jemalloc/test/include/test/SFMT-params11213.h
        deps/jemalloc/test/include/test/SFMT-params1279.h
        deps/jemalloc/test/include/test/SFMT-params132049.h
        deps/jemalloc/test/include/test/SFMT-params19937.h
        deps/jemalloc/test/include/test/SFMT-params216091.h
        deps/jemalloc/test/include/test/SFMT-params2281.h
        deps/jemalloc/test/include/test/SFMT-params4253.h
        deps/jemalloc/test/include/test/SFMT-params44497.h
        deps/jemalloc/test/include/test/SFMT-params607.h
        deps/jemalloc/test/include/test/SFMT-params86243.h
        deps/jemalloc/test/include/test/SFMT-sse2.h
        deps/jemalloc/test/include/test/SFMT.h
        deps/jemalloc/test/include/test/test.h
        deps/jemalloc/test/include/test/thd.h
        deps/jemalloc/test/integration/aligned_alloc.c
        deps/jemalloc/test/integration/allocated.c
        deps/jemalloc/test/integration/allocm.c
        deps/jemalloc/test/integration/mallocx.c
        deps/jemalloc/test/integration/MALLOCX_ARENA.c
        deps/jemalloc/test/integration/mremap.c
        deps/jemalloc/test/integration/posix_memalign.c
        deps/jemalloc/test/integration/rallocm.c
        deps/jemalloc/test/integration/rallocx.c
        deps/jemalloc/test/integration/thread_arena.c
        deps/jemalloc/test/integration/thread_tcache_enabled.c
        deps/jemalloc/test/integration/xallocx.c
        deps/jemalloc/test/src/math.c
        deps/jemalloc/test/src/mtx.c
        deps/jemalloc/test/src/SFMT.c
        deps/jemalloc/test/src/test.c
        deps/jemalloc/test/src/thd.c
        deps/jemalloc/test/unit/bitmap.c
        deps/jemalloc/test/unit/ckh.c
        deps/jemalloc/test/unit/hash.c
        deps/jemalloc/test/unit/junk.c
        deps/jemalloc/test/unit/mallctl.c
        deps/jemalloc/test/unit/math.c
        deps/jemalloc/test/unit/mq.c
        deps/jemalloc/test/unit/mtx.c
        deps/jemalloc/test/unit/prof_accum.c
        deps/jemalloc/test/unit/prof_accum.h
        deps/jemalloc/test/unit/prof_accum_a.c
        deps/jemalloc/test/unit/prof_accum_b.c
        deps/jemalloc/test/unit/prof_gdump.c
        deps/jemalloc/test/unit/prof_idump.c
        deps/jemalloc/test/unit/ql.c
        deps/jemalloc/test/unit/qr.c
        deps/jemalloc/test/unit/quarantine.c
        deps/jemalloc/test/unit/rb.c
        deps/jemalloc/test/unit/rtree.c
        deps/jemalloc/test/unit/SFMT.c
        deps/jemalloc/test/unit/stats.c
        deps/jemalloc/test/unit/tsd.c
        deps/jemalloc/test/unit/util.c
        deps/jemalloc/test/unit/zero.c
        deps/linenoise/example.c
        deps/linenoise/linenoise.c
        deps/linenoise/linenoise.h
        deps/lua/etc/all.c
        deps/lua/etc/lua.hpp
        deps/lua/etc/min.c
        deps/lua/etc/noparser.c
        deps/lua/src/fpconv.c
        deps/lua/src/fpconv.h
        deps/lua/src/lapi.c
        deps/lua/src/lapi.h
        deps/lua/src/lauxlib.c
        deps/lua/src/lauxlib.h
        deps/lua/src/lbaselib.c
        deps/lua/src/lcode.c
        deps/lua/src/lcode.h
        deps/lua/src/ldblib.c
        deps/lua/src/ldebug.c
        deps/lua/src/ldebug.h
        deps/lua/src/ldo.c
        deps/lua/src/ldo.h
        deps/lua/src/ldump.c
        deps/lua/src/lfunc.c
        deps/lua/src/lfunc.h
        deps/lua/src/lgc.c
        deps/lua/src/lgc.h
        deps/lua/src/linit.c
        deps/lua/src/liolib.c
        deps/lua/src/llex.c
        deps/lua/src/llex.h
        deps/lua/src/llimits.h
        deps/lua/src/lmathlib.c
        deps/lua/src/lmem.c
        deps/lua/src/lmem.h
        deps/lua/src/loadlib.c
        deps/lua/src/lobject.c
        deps/lua/src/lobject.h
        deps/lua/src/lopcodes.c
        deps/lua/src/lopcodes.h
        deps/lua/src/loslib.c
        deps/lua/src/lparser.c
        deps/lua/src/lparser.h
        deps/lua/src/lstate.c
        deps/lua/src/lstate.h
        deps/lua/src/lstring.c
        deps/lua/src/lstring.h
        deps/lua/src/lstrlib.c
        deps/lua/src/ltable.c
        deps/lua/src/ltable.h
        deps/lua/src/ltablib.c
        deps/lua/src/ltm.c
        deps/lua/src/ltm.h
        deps/lua/src/lua.c
        deps/lua/src/lua.h
        deps/lua/src/lua_bit.c
        deps/lua/src/lua_cjson.c
        deps/lua/src/lua_cmsgpack.c
        deps/lua/src/lua_struct.c
        deps/lua/src/luac.c
        deps/lua/src/luaconf.h
        deps/lua/src/lualib.h
        deps/lua/src/lundump.c
        deps/lua/src/lundump.h
        deps/lua/src/lvm.c
        deps/lua/src/lvm.h
        deps/lua/src/lzio.c
        deps/lua/src/lzio.h
        deps/lua/src/print.c
        deps/lua/src/strbuf.c
        deps/lua/src/strbuf.h
        src/adlist.c
        src/adlist.h
        src/ae.c
        src/ae.h
        src/ae_epoll.c
        src/ae_evport.c
        src/ae_kqueue.c
        src/ae_select.c
        src/anet.c
        src/anet.h
        src/aof.c
        src/asciilogo.h
        src/bio.c
        src/bio.h
        src/bitops.c
        src/blocked.c
        src/cluster.c
        src/cluster.h
        src/config.c
        src/config.h
        src/crc16.c
        src/crc64.c
        src/crc64.h
        src/db.c
        src/debug.c
        src/dict.c
        src/dict.h
        src/endianconv.c
        src/endianconv.h
        src/fmacros.h
        src/help.h
        src/hyperloglog.c
        src/intset.c
        src/intset.h
        src/latency.c
        src/latency.h
        src/lzf.h
        src/lzf_c.c
        src/lzf_d.c
        src/lzfP.h
        src/memtest.c
        src/multi.c
        src/networking.c
        src/notify.c
        src/object.c
        src/pqsort.c
        src/pqsort.h
        src/pubsub.c
        src/rand.c
        src/rand.h
        src/rdb.c
        src/rdb.h
        src/redis-benchmark.c
        src/redis-check-aof.c
        src/redis-check-dump.c
        src/redis-cli.c
        src/redis.c
        src/redis.h
        src/redisassert.h
        src/release.c
        src/replication.c
        src/rio.c
        src/rio.h
        src/scripting.c
        src/sds.c
        src/sds.h
        src/sentinel.c
        src/setproctitle.c
        src/sha1.c
        src/sha1.h
        src/slowlog.c
        src/slowlog.h
        src/solarisfixes.h
        src/sort.c
        src/sparkline.c
        src/sparkline.h
        src/syncio.c
        src/t_hash.c
        src/t_list.c
        src/t_set.c
        src/t_string.c
        src/t_zset.c
        src/testhelp.h
        src/util.c
        src/util.h
        src/version.h
        src/ziplist.c
        src/ziplist.h
        src/zipmap.c
        src/zipmap.h
        src/zmalloc.c
        src/zmalloc.h)
